service icon ie fix on homepage, carousel nav buttons hide text

--- a/resources/assets/sass/front/pages/_services.scss
+++ b/resources/assets/sass/front/pages/_services.scss
@@ -103,9 +103,13 @@
   max-width: 80px;
   max-height: 80px;
   margin: 0 auto;
+  position: relative;
+  padding-bottom: 23%;
 
   svg {
     width: 100%;
+    height: 100%;
+    position: absolute;
   }
 }
 
