--- a/resources/assets/sass/front/partials/_carousel.scss
+++ b/resources/assets/sass/front/partials/_carousel.scss
@@ -17,6 +17,7 @@
     padding: 0;
     position: absolute;
     border: none;
+    color: transparent;
   }
 
   .slick-next {
@@ -29,6 +30,7 @@
     padding: 0;
     position: absolute;
     border: none;
+    color: transparent;
   }
 
   .slick-next::before {
